<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.DisplayData"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="invisible"
        android:layout_marginEnd="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/date_title"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/hidden_view"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/date"
            android:textColor="@color/text_color"
            android:textSize="20sp"
            android:textStyle="bold"
            />
        <View
            android:id="@+id/hidden_view"
            android:layout_width="1dp"
            android:layout_height="1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="invisible"
            />
        <TextView
            android:id="@+id/wish_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/hidden_view"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/wish"
            android:textColor="@color/text_color"
            android:textSize="20sp"
            android:textStyle="bold"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:id="@+id/empty_data_message"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/empty_data_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textAlignment="center"
        android:visibility="invisible"
        android:textColor="@color/text_color"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="10dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>