<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/mainLayout"
    >
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_below="@id/toolbar"
        >
        <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:id="@+id/frameLayout"
            android:padding="16dp"
            />
        <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/constraint_contains_buttons"
        android:visibility="invisible"
        android:background="@color/footer_header"
            android:elevation="16dp"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/write_constraint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/read_constraint"
            app:layout_constraintEnd_toEndOf="parent"
                >
                <ImageButton
                android:clickable="false"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/write"
                android:id="@+id/writeButton"
                app:layout_constraintBottom_toTopOf="@id/write_word"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:backgroundTint="@color/text_input_field"
                    />
                <TextView
                android:clickable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/writeButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/write_word"
                android:text="@string/write"
                    android:textStyle="bold"
                    android:textSize="16sp"
                android:textColor="@color/text_input_field"

                    />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/read_constraint"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/write_constraint"
            app:layout_constraintStart_toStartOf="parent"
                >
                <ImageButton
                android:clickable="false"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/read"
                android:id="@+id/readButton"
                app:layout_constraintBottom_toTopOf="@id/read_word"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                    />
                <TextView
                android:clickable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/read_word"
                app:layout_constraintTop_toBottomOf="@id/readButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/read"
                    android:textStyle="bold"
                    android:textSize="16sp"
                android:visibility="invisible"
                android:textColor="@color/text_input_field"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <androidx.appcompat.widget.Toolbar
    app:contentInsetStart="0dp"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:id="@+id/toolbar"
    android:background="@color/footer_header"
        android:elevation="16dp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="10dp"
            >
            <ImageView
            android:layout_width="45dp"
            android:layout_height="55dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/back_arrow"
            android:src="@mipmap/back_arrow"
            android:visibility="invisible"
                />
            <View
            android:id="@+id/empty_View_header"
            app:layout_constraintStart_toEndOf="@id/back_arrow"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="15dp"
            android:layout_width="40dp"
            android:layout_height="40dp"/>
            <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/empty_View_header"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/logout"
            android:id="@+id/app_name"
            android:text="@string/app_name"
            android:textColor="@color/text_color"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="20sp"
                />

            <ImageView
            android:src="@mipmap/logout"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/language"
            android:id="@+id/logout"
            android:visibility="invisible"
            android:layout_marginHorizontal="15dp"
                />
            <ImageView
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/language_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/language"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>
    <androidx.constraintlayout.widget.ConstraintLayout
    android:visibility="invisible"
    android:layout_marginHorizontal="10dp"
    android:layout_alignParentEnd="true"
    android:layout_width="100dp"
    android:layout_height="150dp"
    android:id="@+id/language_layout"
    android:layout_below="@id/toolbar"
    android:padding="10dp"
    android:background="@drawable/edit_text_shape"
        android:elevation="16dp"
        >
        <com.abdulkareemMashabi.wishapp.Components.CustomButton
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/language_separator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/arabic"
        android:layout_width="0dp"
        android:layout_height="0dp"/>
        <View
        android:layout_marginVertical="10dp"
        app:layout_constraintTop_toBottomOf="@id/arabic"
        app:layout_constraintBottom_toTopOf="@id/english"
        android:id="@+id/language_separator"
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="7dp"/>
        <com.abdulkareemMashabi.wishapp.Components.CustomButton
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/language_separator"
        android:id="@+id/english"
        android:layout_width="0dp"
        android:layout_height="0dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <FrameLayout
    android:clickable="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:visibility="invisible"
    android:id="@+id/overlay"
    android:alpha="0.25"/>

    <com.airbnb.lottie.LottieAnimationView
    android:visibility="invisible"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/overlayLoading"
    app:lottie_autoPlay="true"
    app:lottie_loop="true"
    app:lottie_rawRes="@raw/button_loading"
        />





</RelativeLayout>